--- a/TelemetrySystem/Project/TelemetrySystem.vcxproj
+++ b/TelemetrySystem/Project/TelemetrySystem.vcxproj
@@ -23,6 +23,7 @@
     <ClCompile Include="..\Src\ITrackerAsset.cpp" />
     <ClCompile Include="..\Src\Persistence.cpp" />
     <ClCompile Include="..\Src\main.cpp" />
+    <ClCompile Include="..\Src\Serializers\JSONSerializer.cpp" />
     <ClCompile Include="..\Src\Tracker.cpp" />
     <ClCompile Include="..\Src\TrackerEvent.cpp" />
   </ItemGroup>
@@ -31,6 +32,7 @@
     <ClInclude Include="..\Src\ITrackerAsset.h" />
     <ClInclude Include="..\Src\Persistence.h" />
     <ClInclude Include="..\Src\ISerializer.h" />
+    <ClInclude Include="..\Src\Serializers\JSONSerializer.h" />
     <ClInclude Include="..\Src\Tracker.h" />
     <ClInclude Include="..\Src\TrackerEvent.h" />
   </ItemGroup>
