Primera versión del CSVSerializer

--- a/TelemetrySystem/Project/TelemetrySystem.vcxproj
+++ b/TelemetrySystem/Project/TelemetrySystem.vcxproj
@@ -23,6 +23,7 @@
     <ClCompile Include="..\Src\ITrackerAsset.cpp" />
     <ClCompile Include="..\Src\Persistence.cpp" />
     <ClCompile Include="..\Src\main.cpp" />
+    <ClCompile Include="..\Src\Serializers\CSVSerializer.cpp" />
     <ClCompile Include="..\Src\Serializers\JSONSerializer.cpp" />
     <ClCompile Include="..\Src\ServerPersistence.cpp" />
     <ClCompile Include="..\Src\Tracker.cpp" />
@@ -33,6 +34,7 @@
     <ClInclude Include="..\Src\ITrackerAsset.h" />
     <ClInclude Include="..\Src\Persistence.h" />
     <ClInclude Include="..\Src\ISerializer.h" />
+    <ClInclude Include="..\Src\Serializers\CSVSerializer.h" />
     <ClInclude Include="..\Src\Serializers\JSONSerializer.h" />
     <ClInclude Include="..\Src\ServerPersistence.h" />
     <ClInclude Include="..\Src\Tracker.h" />
@@ -134,6 +136,7 @@
       <PreprocessorDefinitions>_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
       <LanguageStandard>stdcpp20</LanguageStandard>
+      <AdditionalIncludeDirectories>$(SolutionDir)/Dependencies/json/include/</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -149,6 +152,7 @@
       <PreprocessorDefinitions>NDEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
       <LanguageStandard>stdcpp20</LanguageStandard>
+      <AdditionalIncludeDirectories>$(SolutionDir)/Dependencies/json/include/</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
