--- a/TelemetrySystem/Project/TelemetrySystem.vcxproj.filters
+++ b/TelemetrySystem/Project/TelemetrySystem.vcxproj.filters
@@ -38,6 +38,9 @@
     <ClCompile Include="..\Src\ServerPersistence.cpp">
       <Filter>Archivos de origen</Filter>
     </ClCompile>
+    <ClCompile Include="..\Src\Serializers\CSVSerializer.cpp">
+      <Filter>Serializers</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\Src\TrackerEvent.h">
@@ -63,6 +66,9 @@
     </ClInclude>
     <ClInclude Include="..\Src\ServerPersistence.h">
       <Filter>Archivos de encabezado</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Src\Serializers\CSVSerializer.h">
+        <Filter>Serializers</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
