--- a/TelemetrySystem/Project/TelemetrySystem.vcxproj
+++ b/TelemetrySystem/Project/TelemetrySystem.vcxproj
@@ -30,6 +30,7 @@
     <ClCompile Include="..\Src\TrackerEvent.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="..\Src\CircularQueue.h" />
     <ClInclude Include="..\Src\FilePersistence.h" />
     <ClInclude Include="..\Src\ITrackerAsset.h" />
     <ClInclude Include="..\Src\Persistence.h" />
