--- a/TelemetrySystem/Project/TelemetrySystem.vcxproj.filters
+++ b/TelemetrySystem/Project/TelemetrySystem.vcxproj.filters
@@ -41,6 +41,9 @@
     <ClCompile Include="..\Src\Serializers\CSVSerializer.cpp">
       <Filter>Serializers</Filter>
     </ClCompile>
+    <ClCompile Include="..\Src\TrackerAssets\DefaultTrackerAsset.cpp">
+      <Filter>Archivos de origen</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\Src\TrackerEvent.h">
@@ -71,6 +74,9 @@
       <Filter>Serializers</Filter>
     </ClInclude>
     <ClInclude Include="..\Src\CircularQueue.h">
+      <Filter>Archivos de encabezado</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Src\TrackerAssets\DefaultTrackerAsset.h">
       <Filter>Archivos de encabezado</Filter>
     </ClInclude>
   </ItemGroup>
